fantasy.jobs -- use equals to instead of "==" to compare string -- bug fixed with xserialization -- start tracking manager service